[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "tree_sitter_structured_text"
version = "0.0.1"
description = "Structured Text grammar for tree-sitter"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Anooshiravan/tree-sitter-structured-text"
keywords = ["incremental", "parsing", "tree-sitter", "structured-text"]
include = [
    "src/*",
    "bindings/python/tree_sitter_structured_text/binding.c"
]

[tool.poetry.dependencies]
python = ">=3.11"
tree-sitter = { version = "^0.23", optional = true }


[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
